[package]
name = "dctools"
version = "0.1.0"
edition = "2021"
description = "A tool developed for study purposes that spams a discord channel"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
